--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/application.yml
+
 
 /public/packs
 /public/packs-test
